force-app/main/default/objects/Zip_Segment__c/Zip_Segment__c.object-meta.xml
<CustomObject>
    <description>The Zip Code segmentation information.</description>
    <label>Zip Segment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>