force-app/main/default/objects/Zip_Segment__c/fields/Account_Segmentation_Type_Multi__c.field-meta.xml
<CustomField>
    <fullName>Account_Segmentation_Type_Multi__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Does this segment handle account prospects, clients, lost clients or All?</description>
    <inlineHelpText>Does this segment handle account prospects, clients, lost clients or All?</inlineHelpText>
    <label>Account Segmentation Type Multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>