force-app/main/default/objects/Zip_Segment__c/fields/AccountRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordTypeIds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Auto generated list of record type ids based on the Account Record Types field. Comma Separated.</inlineHelpText>
    <label>Account RecordType Ids</label>
    <length>120</length>
    <type>Text</type>
</CustomField>