force-app/main/default/objects/Zip_Segment__c/fields/AccountSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>AccountSalesOrg__c</fullName>
    <inlineHelpText>The Sales Orgs on the Account to be included with this segment</inlineHelpText>
    <label>Account Sales Org</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>