force-app/main/default/objects/Zip_Segment__c/fields/AcctHoldOutFldName__c.field-meta.xml
<CustomField>
    <fullName>AcctHoldOutFldName__c</fullName>
    <description>The name of the hold out field on the account for this segment (if any)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acct Hold Out Fld Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>