force-app/main/default/objects/Zip_Segment__c/fields/AcctHoldOutReasonFld__c.field-meta.xml
<CustomField>
    <fullName>AcctHoldOutReasonFld__c</fullName>
    <description>The name of the hold out reason field on the account for this segment (if any)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the hold out reason field on the account for this segment (if any)</inlineHelpText>
    <label>Acct Hold Out Reason Fld</label>
    <length>60</length>
    <type>Text</type>
</CustomField>