force-app/main/default/objects/Zip_Segment__c/fields/AcctHoldOutReasonValue__c.field-meta.xml
<CustomField>
    <fullName>AcctHoldOutReasonValue__c</fullName>
    <description>The value of the hold out reason field on the account for this segment (if any)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The value of the hold out reason field on the account for this segment (if any)</inlineHelpText>
    <label>Acct Hold Out Reason Fld Value</label>
    <length>60</length>
    <type>Text</type>
</CustomField>