force-app/main/default/objects/Zip_Segment__c/fields/AcctOwnerFldName__c.field-meta.xml
<CustomField>
    <fullName>AcctOwnerFldName__c</fullName>
    <description>The name of the owner field on the account for this segment (if any)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acct Owner Fld Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>