force-app/main/default/objects/Zip_Segment__c/fields/AcctRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>AcctRecordTypeName__c</fullName>
    <description>The name of the record type on the account for this segment (if any)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acct Record Type Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>