force-app/main/default/objects/Zip_Segment__c/fields/AlwaysAssignTeamMember__c.field-meta.xml
<CustomField>
    <fullName>AlwaysAssignTeamMember__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we always assign the team member, ignoring any other criteria?</inlineHelpText>
    <label>Always Assign Team Member</label>
    <type>Checkbox</type>
</CustomField>