force-app/main/default/objects/Zip_Segment__c/fields/AlwaysOnReferralForm__c.field-meta.xml
<CustomField>
    <fullName>AlwaysOnReferralForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>some zip segments always need to be displayed on the Internal Referral Form even if the record doesn&apos;t meet this segment&apos;s criteria (ex. PAS default segment even if PEO Leasing is checked)</description>
    <inlineHelpText>should this Segment always appear on the Internal Referral form?</inlineHelpText>
    <label>Always Include on Referral Form</label>
    <type>Checkbox</type>
</CustomField>