force-app/main/default/objects/Zip_Segment__c/fields/AlwaysUseCriteria__c.field-meta.xml
<CustomField>
    <fullName>AlwaysUseCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we always use the join criteria even if there is only one zip code in the sales org?</inlineHelpText>
    <label>Always Use Criteria</label>
    <type>Checkbox</type>
</CustomField>