force-app/main/default/objects/Zip_Segment__c/fields/Asset_Max__c.field-meta.xml
<CustomField>
    <fullName>Asset_Max__c</fullName>
    <inlineHelpText>The maximum asset amount for the range</inlineHelpText>
    <label>Asset Max</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>