force-app/main/default/objects/Zip_Segment__c/fields/Asset_Min__c.field-meta.xml
<CustomField>
    <fullName>Asset_Min__c</fullName>
    <inlineHelpText>The minimum asset amount for the range.</inlineHelpText>
    <label>Asset Min</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>