force-app/main/default/objects/Zip_Segment__c/fields/AssistantEmail__c.field-meta.xml
<CustomField>
    <fullName>AssistantEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email of the assistant if a User record is not available.</inlineHelpText>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>