force-app/main/default/objects/Zip_Segment__c/fields/AssistantName__c.field-meta.xml
<CustomField>
    <fullName>AssistantName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the assistant if a User record is not available.</inlineHelpText>
    <label>Assistant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>