force-app/main/default/objects/Zip_Segment__c/fields/Boolean1Field__c.field-meta.xml
<CustomField>
    <fullName>Boolean1Field__c</fullName>
    <description>if you add a field here, be sure to add another ZipCheckOwner setting to custom setting- Paychex Settings. No need to add the field to zip querires.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API field name for the first boolean value</inlineHelpText>
    <label>Boolean 1 Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>