force-app/main/default/objects/Zip_Segment__c/fields/Boolean1True__c.field-meta.xml
<CustomField>
    <fullName>Boolean1True__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the value of Boolean 1 true to meet the conditions?</inlineHelpText>
    <label>Boolean 1 True?</label>
    <type>Checkbox</type>
</CustomField>