force-app/main/default/objects/Zip_Segment__c/fields/Boolean2True__c.field-meta.xml
<CustomField>
    <fullName>Boolean2True__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the value of Boolean 2 true to meet the conditions?</inlineHelpText>
    <label>Boolean 2 True?</label>
    <type>Checkbox</type>
</CustomField>