force-app/main/default/objects/Zip_Segment__c/fields/ClientType__c.field-meta.xml
<CustomField>
    <fullName>ClientType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of different client types we are checking for</inlineHelpText>
    <label>Client Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>