force-app/main/default/objects/Zip_Segment__c/fields/ClientTypeOperand__c.field-meta.xml
<CustomField>
    <fullName>ClientTypeOperand__c</fullName>
    <inlineHelpText>When the Account Segmentation and Client Type both have values, this is how they work together</inlineHelpText>
    <label>Client Type Operand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>NOT EQUALS</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>