force-app/main/default/objects/Zip_Segment__c/fields/CloneFrom__c.field-meta.xml
<CustomField>
    <fullName>CloneFrom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, a territory with this segment can be cloned</description>
    <inlineHelpText>OK to clone a territory From this segment</inlineHelpText>
    <label>Clone From</label>
    <type>Checkbox</type>
</CustomField>