force-app/main/default/objects/Zip_Segment__c/fields/CloneTo__c.field-meta.xml
<CustomField>
    <fullName>CloneTo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a territory can be cloned as this segment.</description>
    <inlineHelpText>OK to Clone a territory To this Segment</inlineHelpText>
    <label>Clone To</label>
    <type>Checkbox</type>
</CustomField>