force-app/main/default/objects/Zip_Segment__c/fields/CtctHoldOutFldName__c.field-meta.xml
<CustomField>
    <fullName>CtctHoldOutFldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the hold out field on the contact record.</inlineHelpText>
    <label>Ctct Hold Out Fld Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>