force-app/main/default/objects/Zip_Segment__c/fields/CtctOwnerFldName__c.field-meta.xml
<CustomField>
    <fullName>CtctOwnerFldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the owner field on the contact record.</inlineHelpText>
    <label>Ctct Owner Fld Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>