force-app/main/default/objects/Zip_Segment__c/fields/Delete_ZipAssignments__c.field-meta.xml
<CustomField>
    <fullName>Delete_ZipAssignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, when this territory is deleted it will delete all related Zip Assignments.</description>
    <inlineHelpText>OK to delete Zip Assgns when delete this segment territory</inlineHelpText>
    <label>Delete Zip Assignments</label>
    <type>Checkbox</type>
</CustomField>