force-app/main/default/objects/Zip_Segment__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If you want to have a specific display name print for the Zip Segment</inlineHelpText>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>