force-app/main/default/objects/Zip_Segment__c/fields/Emps_Max__c.field-meta.xml
<CustomField>
    <fullName>Emps_Max__c</fullName>
    <description>The maximum number of employees for this segment</description>
    <inlineHelpText>The maximum number of employees for this segment</inlineHelpText>
    <label>Emps Max</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>