force-app/main/default/objects/Zip_Segment__c/fields/Emps_Min__c.field-meta.xml
<CustomField>
    <fullName>Emps_Min__c</fullName>
    <description>The low number of employees for this segment.</description>
    <inlineHelpText>The low number of employees for this segment.</inlineHelpText>
    <label>Emps Min</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>