force-app/main/default/objects/Zip_Segment__c/fields/JoinCriteria__c.field-meta.xml
<CustomField>
    <fullName>JoinCriteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How are we joining the employees and assets criteria? For example, does it have to match both, or just one of them? Values are (Emps) (Assets) (And) (Or) (None)</inlineHelpText>
    <label>Join Criteria</label>
    <length>80</length>
    <type>Text</type>
</CustomField>