force-app/main/default/objects/Zip_Segment__c/fields/LeadRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordTypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Id of the Lead Record Type, auto populated via the trigger from Lead RecordType Name.</inlineHelpText>
    <label>Lead RecordTypeId</label>
    <length>22</length>
    <type>Text</type>
</CustomField>