force-app/main/default/objects/Zip_Segment__c/fields/LeadRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordTypeName__c</fullName>
    <description>The name of the record type on the lead for this segment (if any)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead RecordType Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>