force-app/main/default/objects/Zip_Segment__c/fields/MgrEmail__c.field-meta.xml
<CustomField>
    <fullName>MgrEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email of the manager if a User record is not available.</inlineHelpText>
    <label>Mgr Email</label>
    <type>Email</type>
</CustomField>