force-app/main/default/objects/Zip_Segment__c/fields/MgrName__c.field-meta.xml
<CustomField>
    <fullName>MgrName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the manager if a User record is not available.</inlineHelpText>
    <label>Mgr Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>