force-app/main/default/objects/Zip_Segment__c/fields/NeverOnReferralForm__c.field-meta.xml
<CustomField>
    <fullName>NeverOnReferralForm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in Conjunction with the Override Segment Key on Referral Partner.  Check this box and then put a specific segment name on the referral partner to only show certain segments for certain types of referral.</inlineHelpText>
    <label>Never Include On Referral Form</label>
    <type>Checkbox</type>
</CustomField>