force-app/main/default/objects/Zip_Segment__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If used to add to an Opportunity Team, the Opportunity Types (comma separated) we&apos;ll be adding the team member for.</inlineHelpText>
    <label>Opportunity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>