force-app/main/default/objects/Zip_Segment__c/fields/OpptyRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>OpptyRecordTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this is specific to a certain record type on the Opportunity, the name of the Record Type.</inlineHelpText>
    <label>Oppty Record Type Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>