force-app/main/default/objects/Zip_Segment__c/fields/OpptyTeamMemberName__c.field-meta.xml
<CustomField>
    <fullName>OpptyTeamMemberName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When adding to an opportunity team, the name of the team member.</inlineHelpText>
    <label>Oppty Team Member Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>