force-app/main/default/objects/Zip_Segment__c/fields/OverrideMgr__c.field-meta.xml
<CustomField>
    <fullName>OverrideMgr__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To always use this Manager name/email instead of trying to find the Manager in the Org Unit User Links</inlineHelpText>
    <label>Override Mgr</label>
    <type>Checkbox</type>
</CustomField>