force-app/main/default/objects/Zip_Segment__c/fields/Paychex_Id__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Id__c</fullName>
    <description>Unique identifier from Paychex for this record.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier from Paychex for this record.</inlineHelpText>
    <label>Paychex Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>