force-app/main/default/objects/Zip_Segment__c/fields/ReferralSourceType__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceType__c</fullName>
    <inlineHelpText>Which referral source business types are valid for this segment? Referral Source Business Type has to be with a Record Type. Once you add a business type, all segments with that record type have to have a business type.</inlineHelpText>
    <label>Referral Source Business Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Firm</fullName>
            </value>
            <value>
                <fullName>Agency Full Service</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Broker Dealer Branch</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Health Ins Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>MSP Partner</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>P&amp;C Broker</fullName>
            </value>
            <value>
                <fullName>Paychex Co</fullName>
            </value>
            <value>
                <fullName>PEO Broker</fullName>
            </value>
            <value>
                <fullName>Private Equity Firm</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Strategic Accountant Firm</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
            <value>
                <fullName>Payroll Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>