force-app/main/default/objects/Zip_Segment__c/fields/RemoveCriteriaIfNoZip__c.field-meta.xml
<CustomField>
    <fullName>RemoveCriteriaIfNoZip__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there isn&apos;t a zip assignment with this criteria, remove this criteria from other zip assignments within this sales org. Ex: 3 Segments. 1 Boolean, 2 Emps and Booleans. No Zip with the Boolean criteria. Only evaluate by Zips on remaining two.</inlineHelpText>
    <label>Remove Criteria If No Zip</label>
    <type>Checkbox</type>
</CustomField>