force-app/main/default/objects/Zip_Segment__c/fields/RfrlAcctDefault__c.field-meta.xml
<CustomField>
    <fullName>RfrlAcctDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there are multiple tiers available for a referral account for a sales org, this is the default value.</inlineHelpText>
    <label>Rfrl Acct Default</label>
    <type>Checkbox</type>
</CustomField>