force-app/main/default/objects/Zip_Segment__c/fields/RfrlAcctHoldOutFldName__c.field-meta.xml
<CustomField>
    <fullName>RfrlAcctHoldOutFldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the hold out field on the Referral Account</inlineHelpText>
    <label>Rfrl Acct Hold Out Fld Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>