force-app/main/default/objects/Zip_Segment__c/fields/RfrlAcctOwnerFldName__c.field-meta.xml
<CustomField>
    <fullName>RfrlAcctOwnerFldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the referral account owner field</inlineHelpText>
    <label>Rfrl Acct Owner Fld Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>