force-app/main/default/objects/Zip_Segment__c/fields/RfrlCtctHoldOutFldName__c.field-meta.xml
<CustomField>
    <fullName>RfrlCtctHoldOutFldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the hold out field on the referral contact record.</inlineHelpText>
    <label>Rfrl Ctct Hold Out Fld Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>