force-app/main/default/objects/Zip_Segment__c/fields/RfrlCtctOwnerFldName__c.field-meta.xml
<CustomField>
    <fullName>RfrlCtctOwnerFldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the owner field on the referral contact record.</inlineHelpText>
    <label>Rfrl Ctct Owner Fld Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>