force-app/main/default/objects/Zip_Segment__c/fields/RfrlRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RfrlRecordTypeIds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Auto generated list of the record type ids based on the entries in the Rfrl RecordTypes field.</inlineHelpText>
    <label>Rfrl RecordType Ids</label>
    <length>120</length>
    <type>Text</type>
</CustomField>