force-app/main/default/objects/Zip_Segment__c/fields/RfrlRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RfrlRecordTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The record type name to use for referrals (if any).</inlineHelpText>
    <label>Rfrl Record Type Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>