force-app/main/default/objects/Zip_Segment__c/fields/RfrlSourceSubTypes__c.field-meta.xml
<CustomField>
    <fullName>RfrlSourceSubTypes__c</fullName>
    <inlineHelpText>If you need to break down the ownership to a lower level, then you can indicate which subtype(s) to include. Has to also have the Referral Source Business Type and Rfrl Record Types.</inlineHelpText>
    <label>Rfrl Source Sub Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSP Partner</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>