force-app/main/default/objects/Zip_Segment__c/fields/RfrlSubTypesExcluded__c.field-meta.xml
<CustomField>
    <fullName>RfrlSubTypesExcluded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If there are sub types to exclude from this query (because they are used on other segments that match this record type/referral source business type combination. Comma Separated.</inlineHelpText>
    <label>Rfrl Sub Types Excluded</label>
    <length>40</length>
    <type>Text</type>
</CustomField>