force-app/main/default/objects/Zip_Segment__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Org</label>
    <length>40</length>
    <type>Text</type>
</CustomField>