force-app/main/default/objects/Zip_Segment__c/fields/TeamRole__c.field-meta.xml
<CustomField>
    <fullName>TeamRole__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BenAdmin Sales Rep</fullName>
            </value>
            <value>
                <fullName>Core Partner</fullName>
            </value>
            <value>
                <fullName>Enterprise Client Support Representative</fullName>
            </value>
            <value>
                <fullName>ESR Sales Representative</fullName>
            </value>
            <value>
                <fullName>External Wholesaler</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Wholesaler</fullName>
            </value>
            <value>
                <fullName>HNBF Partner</fullName>
            </value>
            <value>
                <fullName>HNB Individual Insurance Partner</fullName>
            </value>
            <value>
                <fullName>HRS 401(k) Large Market Partner</fullName>
            </value>
            <value>
                <fullName>HRS 401(k) Small Market Partner</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Internal Wholesaler</fullName>
            </value>
            <value>
                <fullName>Large Market 401(k) Partner</fullName>
            </value>
            <value>
                <fullName>Major Account Manager</fullName>
            </value>
            <value>
                <fullName>Merchant Services Representative</fullName>
            </value>
            <value>
                <fullName>MMS Partner</fullName>
            </value>
            <value>
                <fullName>MMS Sales TSS</fullName>
            </value>
            <value>
                <fullName>myStaffingPro Internal Partner</fullName>
            </value>
            <value>
                <fullName>myStaffingPro Sales Representative</fullName>
            </value>
            <value>
                <fullName>OS Major Account Manager</fullName>
            </value>
            <value>
                <fullName>P&amp;C Partner</fullName>
            </value>
            <value>
                <fullName>PBA Sales Representative</fullName>
            </value>
            <value>
                <fullName>PEO-ASO Partner</fullName>
            </value>
            <value>
                <fullName>PEO Centric Rep</fullName>
            </value>
            <value>
                <fullName>RPS Account Representative</fullName>
            </value>
            <value>
                <fullName>Small Market 401(k)/FSA Partner</fullName>
                <label>Small Market 401(k) Partner</label>
            </value>
            <value>
                <fullName>Virtual TAA Sales Rep</fullName>
            </value>
            <value>
                <fullName>401k Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>