force-app/main/default/objects/Zip_Segment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Emps_Min__c</columns>
    <columns>Emps_Max__c</columns>
    <columns>JoinCriteria__c</columns>
    <columns>AlwaysUseCriteria__c</columns>
    <columns>AlwaysOnReferralForm__c</columns>
    <columns>NeverOnReferralForm__c</columns>
    <columns>Boolean1Field__c</columns>
    <columns>Boolean1True__c</columns>
    <columns>AcctOwnerFldName__c</columns>
    <columns>FallbackSegment__c</columns>
    <columns>Account_Segmentation_Type_Multi__c</columns>
    <columns>AccountRecordTypes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>