force-app/main/default/objects/Zip_Segment__c/listViews/All_Agency.listView-meta.xml
<ListView>
    <fullName>All_Agency</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Emps_Min__c</columns>
    <columns>Emps_Max__c</columns>
    <columns>Asset_Min__c</columns>
    <columns>Asset_Max__c</columns>
    <columns>JoinCriteria__c</columns>
    <columns>AlwaysUseCriteria__c</columns>
    <columns>AlwaysOnReferralForm__c</columns>
    <columns>NeverOnReferralForm__c</columns>
    <columns>Boolean1Field__c</columns>
    <columns>Boolean1True__c</columns>
    <columns>CloneTo__c</columns>
    <columns>AcctOwnerFldName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>HNBF,PC</value>
    </filters>
    <label>All - Agency</label>
</ListView>