force-app/main/default/objects/Zip_Segment__c/listViews/All_PEO.listView-meta.xml
<ListView>
    <fullName>All_PEO</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Emps_Min__c</columns>
    <columns>Emps_Max__c</columns>
    <columns>Asset_Min__c</columns>
    <columns>Asset_Max__c</columns>
    <columns>AccountSegmentationType__c</columns>
    <columns>ClientType__c</columns>
    <columns>JoinCriteria__c</columns>
    <columns>AlwaysUseCriteria__c</columns>
    <columns>AlwaysOnReferralForm__c</columns>
    <columns>NeverOnReferralForm__c</columns>
    <columns>AcctOwnerFldName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>PEO</value>
    </filters>
    <label>All - PEO</label>
</ListView>