force-app/main/default/objects/Zip_Segment__c/listViews/All_Rfrl_Flds.listView-meta.xml
<ListView>
    <fullName>All_Rfrl_Flds</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>RfrlAcctDefault__c</columns>
    <columns>RfrlAcctOwnerFldName__c</columns>
    <columns>RfrlAcctHoldOutFldName__c</columns>
    <columns>RfrlCtctOwnerFldName__c</columns>
    <columns>RfrlCtctHoldOutFldName__c</columns>
    <columns>RfrlRecordTypes__c</columns>
    <columns>ReferralSourceType__c</columns>
    <columns>RfrlSourceSubTypes__c</columns>
    <columns>RfrlSubTypesExcluded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-Rfrl Flds</label>
</ListView>