force-app/main/default/objects/Zip_Segment__c/listViews/All_Rfrl_Record_Types.listView-meta.xml
<ListView>
    <fullName>All_Rfrl_Record_Types</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Emps_Min__c</columns>
    <columns>Emps_Max__c</columns>
    <columns>RfrlRecordTypes__c</columns>
    <columns>JoinCriteria__c</columns>
    <columns>AlwaysUseCriteria__c</columns>
    <columns>AlwaysOnReferralForm__c</columns>
    <columns>NeverOnReferralForm__c</columns>
    <columns>AcctOwnerFldName__c</columns>
    <columns>FallbackSegment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Rfrl Record Types</label>
</ListView>