force-app/main/default/objects/Zip_Segment__c/listViews/All_Segment_Key.listView-meta.xml
<ListView>
    <fullName>All_Segment_Key</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Emps_Min__c</columns>
    <columns>Emps_Max__c</columns>
    <columns>Asset_Min__c</columns>
    <columns>Asset_Max__c</columns>
    <columns>Segment_Key__c</columns>
    <columns>JoinCriteria__c</columns>
    <columns>AcctOwnerFldName__c</columns>
    <columns>FallbackSegment__c</columns>
    <columns>EvaluatePayrollSegmentation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-Segment Key</label>
</ListView>